k8s/todak_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: todak-service
  namespace: todak  
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: todak
