k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todak-ingress
  namespace: todak
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "3G"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "3G"
    nginx.ingress.kubernetes.io/affinity: "cookie"  # 세션 스티키니스 활성화
    nginx.ingress.kubernetes.io/session-cookie-name: "todak-session"  # 세션 쿠키 이름
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"  # 쿠키 해시 알고리즘
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx  # 여기에 ingressClassName을 추가
  tls:
    - hosts:
        - "server.todak.site"
      secretName: todak-com-tls
  rules:
    - host: server.todak.site
      http:
        paths:
          - path: /member-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: member-service
                port: 
                  number: 80
          - path: /reservation-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port: 
                  number: 80
          - path: /community-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: community-service
                port: 
                  number: 80
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: member-service  # 기본 서비스로 지정
          #       port:
          #         number: 80
